--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav *ngIf="authService.isAuthenticated()" class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,13 +6,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+                <li *ngIf="authService.isInRole(['Admin'])" class="nav-item">
                     <a class="nav-link" routerLink="/radnici">Radnici</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li *ngIf="authService.isInRole(['Admin'])" i class="nav-item">
                     <a class="nav-link" routerLink="/radna-mesta">Radna mesta</a>
-                </li>
-                <li class="nav-item">
+                </li> -->
+                <li *ngIf="authService.isInRole(['Admin'])" class="nav-item">
                     <a class="nav-link" routerLink="/organizacione-jedinice">Organizacione jedinice</a>
                 </li>
                 <li class="nav-item">
@@ -21,22 +21,23 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/predmeti-rada">Predmeti rada</a>
                 </li>
-                <li class="nav-item">
+                <li *ngIf="authService.isInRole(['Admin', 'Menadzer'])" class="nav-item">
                     <a class="nav-link" routerLink="/planovi-proizvodnje">Planovi proizvodnje</a>
                 </li>
-                <li class="nav-item">
+                <li *ngIf="authService.isInRole(['Admin'])" class="nav-item">
                     <a class="nav-link" routerLink="/skladista">Skladišta</a>
                 </li>
-                <li class="nav-item">
+                <li *ngIf="authService.isInRole(['Admin'])" class="nav-item">
                     <a class="nav-link" routerLink="/tehnoloski-postupci">Tehnološki postupci</a>
                 </li>
-                <li class="nav-item">
+                <li *ngIf="authService.isInRole(['Admin'])" class="nav-item">
                     <a class="nav-link" routerLink="/tehnoloski-sistemi">Tehnološki sistemi</a>
                 </li>
-                <li class="nav-item">
+                <li *ngIf="authService.isInRole(['Admin'])" class="nav-item">
                     <a class="nav-link" routerLink="/pogoni">Pogoni</a>
                 </li>
             </ul>
+            <button class="btn btn-outline-primary" type="submit" (click)="onClickLogout()">Odjavi se</button>
         </div>
     </div>
 </nav>
