--- a/src/app/components/workplace/workplace.component.html
+++ b/src/app/components/workplace/workplace.component.html
@@ -1,58 +1,69 @@
-<div class="row">
-    <div class="col-md-3">
-        <label for="search">Pretraga</label>
-        <input id="search" type="text" class="form-control" name="serach" [(ngModel)]="search" (input)="onInputSearch()"
-            placeholder="Pretraži radna mesta" />
-    </div>
-    <div class="col-md-3">
-        <label for="sortBy">Sortiraj prema</label>
-        <select id="sortBy" class="form-select" [(ngModel)]="sortBy" (ngModelChange)="getWorkplaces()">
-            <option [ngValue]="'WorkplaceName'" selected>Naziv radnog mesta</option>
-        </select>
-    </div>
-    <div class="col-md-3">
-        <label for="sortBy">Redosled sortiranja</label>
-        <select id="sortBy" class="form-select" [(ngModel)]="sortOrder" (ngModelChange)="getWorkplaces()">
-            <option [ngValue]="'ASC'" selected>Rastuće</option>
-            <option [ngValue]="'DESC'">Opadajuće</option>
-        </select>
+<div class="container info-section">
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Radna mesta</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">Informacije o radnim mestima</h6>
+            <div class="row">
+                <div class="col-md-3">
+                    <label for="search">Pretraga</label>
+                    <input id="search" type="text" class="form-control" name="serach" [(ngModel)]="search"
+                        (input)="onInputSearch()" placeholder="Pretraži radna mesta" />
+                </div>
+                <div class="col-md-3">
+                    <label for="sortBy">Sortiraj prema</label>
+                    <select id="sortBy" class="form-select" [(ngModel)]="sortBy" (ngModelChange)="getWorkplaces()">
+                        <option [ngValue]="'WorkplaceName'" selected>Naziv radnog mesta</option>
+                    </select>
+                </div>
+                <div class="col-md-3">
+                    <label for="sortBy">Redosled sortiranja</label>
+                    <select id="sortBy" class="form-select" [(ngModel)]="sortOrder" (ngModelChange)="getWorkplaces()">
+                        <option [ngValue]="'ASC'" selected>Rastuće</option>
+                        <option [ngValue]="'DESC'">Opadajuće</option>
+                    </select>
+                </div>
+            </div>
+
+            <span class="col col-form-label" *ngIf="isLoading">Loading...</span>
+
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">Naziv radnog mesta</th>
+                        <th scope="col"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let workplace of workplaces" (click)="onClickRow(workplace)">
+                        <td>{{ workplace.workplaceName }}</td>
+                        <td>
+                            <button type="button" class="btn btn-primary btn-edit"
+                                (click)="onClickUpdate($event, workplace)">Izmeni</button>
+                            <button type="button" class="btn btn-danger"
+                                (click)="onClickDelete($event, workplace)">Obriši</button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="d-flex justify-content-between p-2">
+                <ngb-pagination *ngIf="workplacesTotalCount" [collectionSize]="workplacesTotalCount" [(page)]="page"
+                    [pageSize]="count" (pageChange)="getWorkplaces()">
+                </ngb-pagination>
+
+                <select class="form-select" style="width: auto" name="pageSize" [(ngModel)]="count"
+                    (ngModelChange)="getWorkplaces()">
+                    <option [ngValue]="2">2 stavke po strani</option>
+                    <option [ngValue]="5">5 stavki po strani</option>
+                    <option [ngValue]="10">10 stavki po strani</option>
+                </select>
+            </div>
+
+            <button type="button" class="btn btn-primary btn-add" (click)="onClickAdd()">Dodaj</button>
+
+        </div>
     </div>
 </div>
-
-<span class="col col-form-label" *ngIf="isLoading">Loading...</span>
-
-<table class="table table-hover">
-    <thead>
-        <tr>
-            <th scope="col">Naziv radnog mesta</th>
-            <th scope="col"></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let workplace of workplaces" (click)="onClickRow(workplace)">
-            <td>{{ workplace.workplaceName }}</td>
-            <td>
-                <button type="button" class="btn btn-primary" (click)="onClickUpdate($event, workplace)">Izmeni</button>
-                <button type="button" class="btn btn-danger" (click)="onClickDelete($event, workplace)">Obriši</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
-
-<div class="d-flex justify-content-between p-2">
-    <ngb-pagination *ngIf="workplacesTotalCount" [collectionSize]="workplacesTotalCount" [(page)]="page"
-        [pageSize]="count" (pageChange)="getWorkplaces()">
-    </ngb-pagination>
-
-    <select class="form-select" style="width: auto" name="pageSize" [(ngModel)]="count"
-        (ngModelChange)="getWorkplaces()">
-        <option [ngValue]="2">2 stavke po strani</option>
-        <option [ngValue]="5">5 stavki po strani</option>
-        <option [ngValue]="10">10 stavki po strani</option>
-    </select>
-</div>
-
-<button type="button" class="btn btn-primary" (click)="onClickAdd()">Dodaj</button>
 
 <ng-template #content let-modal>
     <div class="modal-header">
@@ -90,10 +101,6 @@
         </div>
     </form>
 </ng-template>
-
-<hr />
-
-<pre>{{ closeResult }}</pre>
 
 <ngb-toast class="text-light" *ngIf="toastMessage" [autohide]="true" (hidden)="onHideToast()"
     [ngClass]="isError ? 'bg-danger' : 'bg-success'">{{toastMessage}}</ngb-toast>
