--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css"
+@import "~bootstrap/dist/css/bootstrap.css";
+
+.info-section {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.btn-edit {
+    margin-right: 10px;
+}
+
+.btn-add {
+    margin-left: 10px;
+}
